# meincraft2

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  readme.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/images/: atlas.xcf  atlas1.xcf  atlas_gimp.xcf
res/shaders/: cube.frag  cube.vert  light.frag  light.vert  text.frag  text.vert  ui.frag  ui.vert  world.frag  world.vert
src/: main.cpp
src/render/: camera.cpp  camera.h  culling.cpp  culling.h  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/ui/: crosshair.cpp  crosshair.h  debug.cpp  debug.h  text.cpp  text.h  ui.cpp  ui.h
src/util/: debug.cpp  debug.h  defines.h  util.h
src/world/: chunk.cpp  chunk.h  player.cpp  player.h  world.cpp  world.h
